config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twenty-for-one-deployment
  labels:
    app: twenty-for-one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twenty-for-one
  template:
    metadata:
      labels:
        app: twenty-for-one
    spec:
      containers:
      - name: twenty-for-one
        image: gcr.io/twenty-for-one/twenty-for-one-docker
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
