config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twenty-for-one
spec:
  selector:
    app: twenty-for-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
