config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: twenty-for-one-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.twentyforone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: twenty-for-one
          servicePort: 80
